--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
 
 <html lang="en">
 <head>
+  <title>Photon Map</title>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
@@ -35,6 +36,11 @@
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/menu.css" rel="stylesheet">
+  <style>
+    .cesium-infoBox {
+      max-width: 600px;
+    }
+  </style>
 </head>
 <body onload="populateData();">
   <div id="loader" class="loader"></div>
@@ -70,6 +76,7 @@
     viewer.infoBox.frame.setAttribute("sandbox", "allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox");
     viewer.infoBox.frame.src = "about:blank";
     viewer.infoBox.frame.style.minHeight = "400px";
+    // viewer.infoBox.frame.style.maxWidth = "500px";
 
     var clock = new Cesium.Clock({
        clockStep : Cesium.ClockStep.SYSTEM_CLOCK_MULTIPLIER
@@ -79,13 +86,13 @@
     var adsbDataSource = new KismetAdsbDataSource();
     var kmlDataSources = [];
     var geojson = new Cesium.GeoJsonDataSource();
-    var sparrowDataSource = new SparrowDataSource();
 
-    // sparrowDataSource.loadUrl("http://127.0.0.1:8020/wireless/networks/wlp62s0");
-    // sparrowDataSource.loadUrl("http://172.16.0.121:8020/wireless/networks/wlan0");
-    // viewer.dataSources.add(sparrowDataSource);
     // Update Map every n milliseconds
-    var refreshrate = 15e3;
+    if (localStorage.adsbRefreshRate) {
+      var adsbRefreshRate = localStorage.adsbRefreshRate;
+    } else {
+      var adsbRefreshRate = 15e3;
+    }
     // var refreshAdsb = setInterval(function () { refreshKismetAdsb(); }, refreshrate);
     // clearInterval(refreshAdsb);
 
@@ -120,7 +127,7 @@
     function refreshAllKismet() {
       refreshKismet();
       refreshKismetAdsb();
-      var refreshAdsb = setInterval(function () { refreshKismetAdsb(); }, refreshrate);
+      var refreshAdsb = setInterval(function () { refreshKismetAdsb(); }, adsbRefreshRate);
     }
 
     function setKmlOpacity(kmlIndex, i, opacity) {
@@ -160,6 +167,15 @@
     }
 
   </script>
+
+  <script>
+    function addNewSparrowSource(url) {
+      var sparrowDataSource = new SparrowDataSource();
+      sparrowDataSource.loadUrl(url);
+      // sparrowDataSource.loadUrl("http://172.16.0.121:8020/wireless/networks/wlan0");
+      viewer.dataSources.add(sparrowDataSource);
+    }
+  </script>
   <script>
     function showOutterMenu(menuId) {
       menuId.style.transform = "translate(85%, 0)";
@@ -194,6 +210,7 @@
       }
     }
   </script>
+
   <script>
     var scene = viewer.scene;
     var pickingPosition = false;
@@ -440,10 +457,20 @@
                     break;
                   }
                 }
+                let entityList = document.createElement("ul");
                 for (var [i, entity] of kml.entities.values.entries()) {
-                  let entitySpan = document.createElement("span");
+                  // let entitySpan = document.createElement("span");
+                  let entitySpan = document.createElement("li");
+                  let showEntity = document.createElement("input");
+                  showEntity.type = "checkbox";
+                  showEntity.checked = true;
+                  showEntity.setAttribute(
+                    "onchange",
+                    `kmlDataSources[${kmlDataSources.length}].entities.values[${i}].show = this.checked;`
+                  );
+                  entitySpan.appendChild(showEntity);
+                  entitySpan.appendChild(document.createTextNode(`${entity.name} `));
                   if (entity.rectangle) {
-                    entityDisplay.appendChild(document.createTextNode(`${entity.name} `));
                     let opacitySlider = document.createElement("input");
                     opacitySlider.type = "range";
                     opacitySlider.min = 0;
@@ -453,11 +480,13 @@
                       "oninput",
                       `setKmlOpacity(${kmlDataSources.length}, ${i}, this.value)`
                     );
-                    entityDisplay.appendChild(document.createTextNode("Opacity: "));
-                    entityDisplay.appendChild(opacitySlider);
-                    entityDisplay.appendChild(document.createElement("br"));
+                    entitySpan.appendChild(document.createTextNode("Opacity: "));
+                    entitySpan.appendChild(opacitySlider);
                   }
+                  entityList.appendChild(entitySpan);
+                  // entityDisplay.appendChild(document.createElement("br"));
                 }
+                entityDisplay.appendChild(entityList);
                 entityDisplay.appendChild(document.createElement("hr"));
                 kmlDataSources.push(kml);
                 viewer.flyTo(viewer.dataSources.add(kmlDataSources[kmlDataSources.length - 1]));
@@ -621,11 +650,18 @@
         onfocusout="localStorage.accessToken = this.value.trim();"
         >Your access token can be found at: https://cesium.com/ion/tokens.</textarea>
         <br>
+        <!-- <br>
+        <span>ADS-B Refresh Rate:</span>
+        <input id="adsbRefresh" onfocusout=""/><br> -->
         <script>
           function updateTokenInfo() {
             if (localStorage.accessToken) {
               document.getElementById("tokenlInput").value = localStorage.accessToken;
             }
+          }
+          function updateAdsbRefresh(rate) {
+            adsbRefreshRate = rate;
+            localStorage.adsbRefreshRate = rate;
           }
         </script>
       </div>
